log
Thu 20 Apr 2023 11:32:26 PM UTC: 
 tests:  1|8
total_score: 0/70
f7d26d5
Thu 20 Apr 2023 11:35:38 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
5146262
Thu 20 Apr 2023 11:37:48 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
8fc771a
Fri 21 Apr 2023 12:06:02 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  6|7
total_score: 5/70
2333608
Fri 21 Apr 2023 12:07:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
73e85cb
Fri 21 Apr 2023 12:08:28 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|7
total_score: 5/70
a1cc479
Fri 21 Apr 2023 12:11:10 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
24e503b
Fri 21 Apr 2023 12:17:23 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
7245407
Fri 21 Apr 2023 12:17:39 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
181dcb6
Fri 21 Apr 2023 12:48:03 AM UTC: 
 tests:  6|7
total_score: 5/70
2ebda1b
Fri 21 Apr 2023 12:52:16 AM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:11: error: unused variable ‘comparar’ [-Werror=unused-variable]
   79 |       int comparar=tree->lower_than(key,actual->pair->key);
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
624a973
Fri 21 Apr 2023 12:53:07 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
97add28
Fri 21 Apr 2023 03:00:15 AM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|0
3509265
Fri 21 Apr 2023 03:02:14 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
bcb5dbb
Fri 21 Apr 2023 03:03:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
3d91f6b
Fri 21 Apr 2023 03:07:45 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  12|6
total_score: 15/70
516224f
Fri 21 Apr 2023 03:08:12 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
287abe1
Fri 21 Apr 2023 03:11:26 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
ff8d65a
Fri 21 Apr 2023 06:40:12 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:87:20: error: statement with no effect [-Werror=unused-value]
   87 |         padre->left==NULL;
      |                    ^
treemap.c:89:21: error: statement with no effect [-Werror=unused-value]
   89 |         padre->right==NULL;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
91a2d89
Fri 21 Apr 2023 06:40:22 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
c2efc9b
Fri 21 Apr 2023 06:52:59 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  17|4
total_score: 35/70
d194009
Fri 21 Apr 2023 07:10:28 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
f47c065
Fri 21 Apr 2023 07:10:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e4722f6
Fri 21 Apr 2023 07:13:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fae3269
Fri 21 Apr 2023 07:15:25 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
7f190cd
